Created and styled Hero content

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     ></script>
   </head>
   <body>
-    Hello World
+    <div class="hero">
+      <p>🙋🏼‍♀️ Hi, I am</p>
+      <h1>HENRIETT HORVATH</h1>
+      <h2 class="mb-5">Front-end developer based in Zürich, Switzerland</h2>
+      <a href="#" class="btn btn-branding">Contact Me</a>
+    </div>
   </body>
 </html>
