--- a/index.html
+++ b/index.html
@@ -35,5 +35,55 @@
       <h2 class="mb-5">Front-end developer based in Zürich, Switzerland</h2>
       <a href="#" class="btn btn-branding">Contact Me</a>
     </div>
+    <p class="mt-5 mb-5 text-center">My Featured Projects</p>
+    <div class="container">
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-4">Yogurt Project</h2>
+            <p class="text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">View Project Details</a>
+          </div>
+        </div></div>
+        <div class="row mt-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-4">Weather Project</h2>
+            <p class="text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">View Project Details</a>
+          </div>
+      </div>
+       <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div></div>
+      <div class="row mt-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/dictionary.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-4">Dictionary Project</h2>
+            <p class="text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">View Project Details</a>
+          </div></div>
+    </div>
   </body>
 </html>
