--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Henriett</title>
+    <title>My work</title>
     <link rel="stylesheet" href="Styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,28 +30,33 @@
   </head>
   <body>
     <div class="content-container mt-5">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1>Hi, I am Henriett Horvath</h1>
-            <h2 class="mt-4 mb-4">
-              Front-end developer based in Zürich, Switzerland
-            </h2>
-            <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="#" class="btn btn-branding"> View my projects</a>
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-5">
+            <img src="images/yogurt.png" class="img-fluid rounded" alt="" />
+            <h3 class="text-center">Yogurt Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="images/henriett.png"
-            alt="Henriett Horvath headshot"
-            class="img-fluid"
-          />
+          <div class="col-md-6 mb-5">
+            <img src="images/weather.png" class="img-fluid rounded" alt="" />
+            <h3 class="text-center">Weather Project</h3>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and JavaScript
+            </p>
+          </div>
+
+          <div class="col-md-6 mb-5">
+            <img src="images/dictionary.png" class="img-fluid rounded" alt="" />
+            <h3 class="text-center">Dictionary App</h3>
+            <p class="text-center text-muted">Built with HTML, CSS and React</p>
+          </div>
+
+          <div class="col-md-6 mb-5">
+            <img src="images/translation.png" class="img-fluid" alt="" />
+            <h3 class="text-center">Translator App</h3>
+            <p class="text-center text-muted">Built with HTML, CSS React</p>
+          </div>
         </div>
       </div>
     </div>
