updated work.html css

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,12 @@
     <div class="content-container mt-5">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
-        <h3>E-mail</h3>
+
         <p>
-          <a class="e-mail" href="mailto:horvath.henriett@gmail.com">
+          <a
+            class="e-mail btn btn-branding"
+            href="mailto:horvath.henriett@gmail.com"
+          >
             horvath.henriett@gmail.com
           </a>
         </p>
