--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       <p>🙋🏼‍♀️ Hi, I am</p>
       <h1>HENRIETT HORVATH</h1>
       <h2 class="mb-5">Front-end developer based in Zürich, Switzerland</h2>
+      <div>
       <a href="#" class="btn btn-branding">Contact Me</a>
+    </div>
     </div>
     <p class="mt-5 mb-5 text-center">My Featured Projects</p>
     <div class="container">
