Included the Navbar on all pages

--- a/index.html
+++ b/index.html
@@ -29,6 +29,38 @@
     ></script>
   </head>
   <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <a class="navbar-brand" href="#">Henriett Horvath</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link active" href="/"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/work.html">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="hero">
       <p>🙋🏼‍♀️ Hi, I am</p>
       <h1>HENRIETT HORVATH</h1>
@@ -54,8 +86,9 @@
             </p>
             <a href="" class="btn btn-branding-outline">View Project Details</a>
           </div>
-        </div></div>
-        <div class="row mt-5">
+        </div>
+      </div>
+        <div class="row">
         <div class="col">
           <div class="project-description">
             <h2 class="mb-4">Weather Project</h2>
@@ -71,7 +104,7 @@
        <div class="col d-none d-lg-block">
           <img src="images/weather.png" class="img-fluid" alt="" />
         </div></div>
-      <div class="row mt-5">
+      <div class="row">
         <div class="col d-none d-lg-block">
           <img src="images/dictionary.png" class="img-fluid" alt="" />
         </div>
