--- a/index.html
+++ b/index.html
@@ -119,6 +119,25 @@
             </p>
             <a href="" class="btn btn-branding-outline">View Project Details</a>
           </div></div>
+          <footer>
+            <div class="contact-box d-flex justify-content-between mt-3">
+              <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+            </div>
+        
+            <div>
+              <a href="" class="btn btn-branding">Contact Me</a>
+            </div>
+            </div>
+            <div class="d-flex justify-content-center mt-5 mb-3">
+              <a href="mailto:horvath.henriett@gmail.com" target=_blank class="email-link">horvath.henriett@gmail.com</a>
+            </div>
+            <div class="social-links d-flex justify-content-center mb-5">
+               <a href="https://github.com/henih" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+ </footer>
     </div>
   </body>
 </html>
