--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand" href="#">Henriett Horvath</a>
+      <a class="navbar-brand ml-5" href="/">Henriett Horvath</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -86,6 +86,34 @@
           />
         </div>
       </div>
+      <footer class="container mt-5">
+        <div class="contact-box d-flex justify-content-between mt-3">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+
+          <div>
+            <a href="" class="btn btn-branding">Contact Me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mt-5 mb-3">
+          <a
+            href="mailto:horvath.henriett@gmail.com"
+            target="_blank"
+            class="email-link"
+            >horvath.henriett@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a href="https://github.com/henih" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
