--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand" href="#">Henriett Horvath</a>
+      <a class="navbar-brand ml-5" href="#">Henriett Horvath</a>
       <button
         class="navbar-toggler"
         type="button"
