Made the website SEO friendly and fixed the navigation and linking

--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Henriett</title>
+    <meta
+      name="description"
+      content="Henriett is a front-end engineer based in Zurich, Swizterland. She has completed the 6 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising."
+    />
     <link rel="stylesheet" href="Styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -50,13 +54,19 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/about.html">About</a>
+            <a class="nav-link active" href="/about.html" title="About Henriett"
+              >About</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/work.html" title="Henriett's Work"
+              >Work</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/contact.html" title="Contact Henriett"
+              >Contact</a
+            >
           </li>
         </ul>
       </div>
@@ -75,7 +85,7 @@
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <a href="#" class="btn btn-branding"> View my projects</a>
+            <a href="/work.html" class="btn btn-branding"> View my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -86,15 +96,20 @@
           />
         </div>
       </div>
-      <footer class="container mt-5">
+      <footer class="container">
         <div class="contact-box d-flex justify-content-between mt-3">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
 
           <div>
-            <a href="" class="btn btn-branding">Contact Me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding"
+              title="Contact Henriett"
+              >Contact Me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mt-5 mb-3">
@@ -106,13 +121,23 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://github.com/henih" target="_blank"
+          <a
+            href="https://github.com/henih"
+            target="_blank"
+            title="Github Profile"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/henrietthorvath/"
+            target="_blank"
+            title="LinkedIn Profile"
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
+          Responsive course.
+        </p>
       </footer>
     </div>
   </body>
