--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front-end developer - Henriett Horvath</title>
+    <meta name="description" content="Henriett is a front-end engineer based in Zurich, Swizterland. She has completed the 6 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising." />
     <link rel="stylesheet" href="Styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +31,7 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand ml-5" href="#">Henriett Horvath</a>
+      <a class="navbar-brand ml-5" href="/" title="Homepage">Henriett Horvath</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -50,13 +51,13 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="About Henriett">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/work.html" title="Henriett's Work">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/contact.html">Contact</a>
+            <a class="nav-link " href="/contact.html" title="Contact Henriett">Contact</a>
           </li>
         </ul>
       </div>
@@ -66,14 +67,14 @@
       <h1>HENRIETT HORVATH</h1>
       <h2 class="mb-5">Front-end developer based in Zürich, Switzerland</h2>
       <div>
-      <a href="#" class="btn btn-branding">Contact Me</a>
+      <a href="/contact.html" class="btn btn-branding" title="Contact Henriett">Contact Me</a>
     </div>
     </div>
     <p class="mt-5 mb-5 text-center">My Featured Projects</p>
     <div class="container">
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/yogurt.png" class="img-fluid" alt="Screenshot of Yogurt Project" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -84,7 +85,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View Project Details</a>
+            <a href="/work.html" class="btn btn-branding-outline">View Project Details</a>
           </div>
         </div>
       </div>
@@ -98,15 +99,15 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View Project Details</a>
+            <a href="/work.html" class="btn btn-branding-outline">View Project Details</a>
           </div>
       </div>
        <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img src="images/weather.png" class="img-fluid" alt="Screenshot of Weather Application" />
         </div></div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img src="images/dictionary.png" class="img-fluid" alt="Screenshot of Dictionary Project" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -117,26 +118,27 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View Project Details</a>
+            <a href="work.html" class="btn btn-branding-outline">View Project Details</a>
           </div></div>
           <footer>
             <div class="contact-box d-flex justify-content-between mt-3">
               <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
             </div>
         
             <div>
-              <a href="" class="btn btn-branding">Contact Me</a>
+              <a href="/contact.html" class="btn btn-branding" title="Contact Henriett">Contact Me</a>
             </div>
             </div>
             <div class="d-flex justify-content-center mt-5 mb-3">
               <a href="mailto:horvath.henriett@gmail.com" target=_blank class="email-link">horvath.henriett@gmail.com</a>
             </div>
             <div class="social-links d-flex justify-content-center mb-5">
-               <a href="https://github.com/henih" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+               <a href="https://github.com/henih" target="_blank" title="Github Profile"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank" title="LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
               </div>
+              <p class="text-center mt-5">👋🏻 This website was coded by Henriett Horvath, as part of SheCodes Responsive course.</p>
  </footer>
     </div>
   </body>
