--- a/work.html
+++ b/work.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My work</title>
+    <title>Henriett's Work</title>
+    <meta
+      name="description"
+      content="Learn more about Henriett's work and have a look at her porfolio."
+    />
     <link rel="stylesheet" href="Styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +34,9 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand ml-5" href="#">Henriett Horvath</a>
+      <a class="navbar-brand ml-5" href="/" title="Homepage"
+        >Henriett Horvath</a
+      >
       <button
         class="navbar-toggler"
         type="button"
@@ -50,13 +56,19 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="About Henriett"
+              >About</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/work.html">Work</a>
+            <a class="nav-link active" href="/work.html" title="Henriett's Work"
+              >Work</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/contact.html" title="Contact Henriett"
+              >Contact</a
+            >
           </li>
         </ul>
       </div>
@@ -66,12 +78,20 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
         <div class="row">
           <div class="col-md-6 mb-5">
-            <img src="images/yogurt.png" class="img-fluid rounded" alt="" />
+            <img
+              src="images/yogurt.png"
+              class="img-fluid rounded"
+              alt="Screenshot of Yogurt Project"
+            />
             <h3 class="text-center">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-5">
-            <img src="images/weather.png" class="img-fluid rounded" alt="" />
+            <img
+              src="images/weather.png"
+              class="img-fluid rounded"
+              alt="Screenshot of Weather Project"
+            />
             <h3 class="text-center">Weather Project</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS and JavaScript
@@ -79,13 +99,21 @@
           </div>
 
           <div class="col-md-6 mb-5">
-            <img src="images/dictionary.png" class="img-fluid rounded" alt="" />
+            <img
+              src="images/dictionary.png"
+              class="img-fluid rounded"
+              alt="Screenshot of Dictionary Project"
+            />
             <h3 class="text-center">Dictionary App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
           </div>
 
           <div class="col-md-6 mb-5">
-            <img src="images/translation.png" class="img-fluid" alt="" />
+            <img
+              src="images/translation.png"
+              class="img-fluid"
+              alt="Screenshot of Translator Project"
+            />
             <h3 class="text-center">Translator App</h3>
             <p class="text-center text-muted">Built with HTML, CSS React</p>
           </div>
@@ -94,12 +122,17 @@
       <footer class="container">
         <div class="contact-box d-flex justify-content-between mt-3">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
 
           <div>
-            <a href="" class="btn btn-branding">Contact Me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding"
+              title="Contact Henriett"
+              >Contact Me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mt-5 mb-3">
@@ -111,13 +144,23 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://github.com/henih" target="_blank"
+          <a
+            href="https://github.com/henih"
+            target="_blank"
+            title="Github Profile"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/henrietthorvath/"
+            target="_blank"
+            title="LinkedIn Profile"
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
+          Responsive course.
+        </p>
       </footer>
     </div>
   </body>
