Fixed About.html Container

--- a/about.html
+++ b/about.html
@@ -71,29 +71,33 @@
         </ul>
       </div>
     </nav>
-    <div class="content-container mt-5">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1>Hi, I am Henriett Horvath</h1>
-            <h2 class="mt-4 mb-4">
-              Front-end developer based in Zürich, Switzerland
-            </h2>
-            <p class="mb-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="/work.html" class="btn btn-branding"> View my projects</a>
+    <div class="container">
+      <div class="content-container mt-5">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="content">
+              <h1>Hi, I am Henriett Horvath</h1>
+              <h2 class="mt-4 mb-4">
+                Front-end developer based in Zürich, Switzerland
+              </h2>
+              <p class="mb-4">
+                For anyone who wants to start learning code, this workshop is
+                very interesting. You will be challenged with different
+                exercises, and everything is well explained, homework and
+                deadlines are good for keep focus
+              </p>
+              <a href="/work.html" class="btn btn-branding">
+                View my projects</a
+              >
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="images/henriett.png"
-            alt="Henriett Horvath headshot"
-            class="img-fluid"
-          />
+          <div class="col-lg-6">
+            <img
+              src="images/henriett.png"
+              alt="Henriett Horvath headshot"
+              class="img-fluid"
+            />
+          </div>
         </div>
       </div>
       <footer class="container">
