Included Github Project link to Footer

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                <a href="https://github.com/henih" target="_blank" title="Github Profile"><i class="fab fa-github"></i></a>
               <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank" title="LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
               </div>
-              <p class="text-center mt-5">👋🏻 This website was coded by Henriett Horvath, as part of SheCodes Responsive course.</p>
+              <p class="text-center mt-5">👋🏻 This website was coded by Henriett Horvath, as part of SheCodes Responsive course and is <a href="https://github.com/henih/Portfolio-project" target="_blank">open-sourced.</a></p>
  </footer>
     </div>
   </body>
