--- a/work.html
+++ b/work.html
@@ -159,7 +159,10 @@
         </div>
         <p class="text-center mt-5">
           👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
-          Responsive course.
+          Responsive course and is
+          <a href="https://github.com/henih/Portfolio-project" target="_blank"
+            >open-sourced.</a
+          ><
         </p>
       </footer>
     </div>
