--- a/about.html
+++ b/about.html
@@ -136,7 +136,10 @@
         <p class="text-center mt-5">
           👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
           Responsive course and is
-          <a href="https://github.com/henih/Portfolio-project" target="_blank"
+          <a
+            class="footer-github-link"
+            href="https://github.com/henih/Portfolio-project"
+            target="_blank"
             >open-sourced.</a
           >
         </p>
