--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                <a href="https://github.com/henih" target="_blank" title="Github Profile"><i class="fab fa-github"></i></a>
               <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank" title="LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
               </div>
-              <p class="text-center mt-5">👋🏻 This website was coded by Henriett Horvath, as part of SheCodes Responsive course and is <a href="https://github.com/henih/Portfolio-project" target="_blank">open-sourced.</a></p>
+              <p class="text-center mt-5">👋🏻 This website was coded by Henriett Horvath, as part of SheCodes Responsive course and is <a class="footer-github-link" href="https://github.com/henih/Portfolio-project" target="_blank">open-sourced.</a></p>
  </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
