--- a/work.html
+++ b/work.html
@@ -152,14 +152,17 @@
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
-        <p class="text-center mt-5">
-          👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
-          Responsive course and is
-          <a href="https://github.com/henih/Portfolio-project" target="_blank"
-            >open-sourced.</a
-          >
-        </p>
       </footer>
+      <p class="text-center mt-5">
+        👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
+        Responsive course and is
+        <a
+          class="footer-github-link"
+          href="https://github.com/henih/Portfolio-project"
+          target="_blank"
+          >open-sourced.</a
+        >
+      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
