--- a/work.html
+++ b/work.html
@@ -28,44 +28,34 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <a class="navbar-brand ml-5" href="/" title="Homepage"
-        >Henriett Horvath</a
-      >
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="/"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/" title="Homepage">Henriett Horvath</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/about.html" title="About Henriett"
               >About</a
             >
-          </li>
-          <li class="nav-item">
             <a class="nav-link active" href="/work.html" title="Henriett's Work"
               >Work</a
             >
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/contact.html" title="Contact Henriett"
               >Contact</a
             >
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
     </nav>
     <div class="content-container mt-5">
