--- a/work.html
+++ b/work.html
@@ -104,6 +104,10 @@
           </div>
         </div>
       </div>
+      <div class="content-container mt-5">
+      <div class="content">
+        <h1 class="mb-5">Let's get in touch!</h1>
+      </div>
       <footer class="container">
         <div class="contact-box d-flex justify-content-between mt-3">
           <div>
@@ -142,17 +146,17 @@
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
+          Responsive course and is
+          <a
+            class="footer-github-link"
+            href="https://github.com/henih/Portfolio-project"
+            target="_blank"
+            >open-sourced.</a
+          >
+        </p>
       </footer>
-      <p class="text-center mt-5">
-        👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
-        Responsive course and is
-        <a
-          class="footer-github-link"
-          href="https://github.com/henih/Portfolio-project"
-          target="_blank"
-          >open-sourced.</a
-        >
-      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
