--- a/about.html
+++ b/about.html
@@ -87,6 +87,10 @@
           </div>
         </div>
       </div>
+     <div class="content-container mt-5">
+      <div class="content">
+        <h1 class="mb-5">Let's get in touch!</h1>
+      </div>
       <footer class="container">
         <div class="contact-box d-flex justify-content-between mt-3">
           <div>
