--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
           </div>
         </div>
       </div>
-     <div class="content-container mt-5">
+     <div class="content-container mt-3">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
       </div>
@@ -99,12 +99,10 @@
           </div>
 
           <div>
-            <a
-              href="/contact.html"
+            <a href="/contact.html"
               class="btn btn-branding"
               title="Contact Henriett"
-              >Contact Me</a
-            >
+              >Contact Me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mt-5 mb-3">
