About page: Updated text, pic, footer

--- a/about.html
+++ b/about.html
@@ -63,15 +63,16 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="content">
-              <h1>Hi, I am Henriett Horvath</h1>
-              <h2 class="mt-4 mb-4">
+              <h1>🙋🏼‍♀️ Hi there, <br /> I am Henriett Horvath</h1>
+              <h2 class="mt-4 mb-5">
                 Front-end developer based in Zürich, Switzerland
               </h2>
-              <p class="mb-4">
-                For anyone who wants to start learning code, this workshop is
-                very interesting. You will be challenged with different
-                exercises, and everything is well explained, homework and
-                deadlines are good for keep focus
+              <p class="mb-5">
+                As a teenager I was put off from studying software engineering in University. My environment deemed it "too manly" and anyway "you need to be a math genius" to be able to learn it.
+                <br /><br />After 12 years working in the Media industry and some pandemic mental tiredness I decided to try coding in the summer of 2021 and enrolled in <a href="https://www.shecodes.io/SheCodes" target="_blank">SheCodes</a> ... and I <strong>loved</strong> it! 😍
+                <br />
+                <br />
+                I'm passionate about Front-end Development and excited to learn more about React, HTML, CSS and Reponsive webdesign.
               </p>
               <a href="/work.html" class="btn btn-branding">
                 View my projects</a
@@ -80,9 +81,9 @@
           </div>
           <div class="col-lg-6">
             <img
-              src="images/henriett.png"
+              src="images/final_funny_BW.jpg"
               alt="Henriett Horvath headshot"
-              class="img-fluid"
+              class="img-fluid w-75 headshot"
             />
           </div>
         </div>
@@ -92,28 +93,22 @@
         <h1 class="mb-5">Let's get in touch!</h1>
       </div>
       <footer class="container">
-        <div class="contact-box d-flex justify-content-between mt-3">
+        <div class="contact-box d-flex justify-content-between mt-3 mb-4">
           <div>
             <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
 
           <div>
-            <a href="/contact.html"
+            <a href="mailto:horvath.henriett@gmail.com"
+            target="_blank"
               class="btn btn-branding"
               title="Contact Henriett"
               >Contact Me</a>
           </div>
         </div>
-        <div class="d-flex justify-content-center mt-5 mb-3">
-          <a
-            href="mailto:horvath.henriett@gmail.com"
-            target="_blank"
-            class="email-link"
-            >horvath.henriett@gmail.com</a
-          >
-        </div>
-        <div class="social-links d-flex justify-content-center mb-5">
+       
+        <div class="social-links d-flex justify-content-center mb-4">
           <a
             href="https://github.com/henih"
             target="_blank"
@@ -127,7 +122,7 @@
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
-        <p class="text-center mt-5">
+        <p class="text-center mt-4">
           👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
           Responsive course and is
           <a
