--- a/index.html
+++ b/index.html
@@ -103,26 +103,47 @@
             </p>
             <a href="work.html" class="btn btn-branding-outline">View Project Details</a>
           </div></div>
-          <footer>
-            <div class="contact-box d-flex justify-content-between mt-3">
-              <div>
+          <footer class="container">
+        <div class="contact-box d-flex justify-content-between mt-3 mb-4">
+          <div>
             <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
-            </div>
-        
-            <div>
-              <a href="/contact.html" class="btn btn-branding" title="Contact Henriett">Contact Me</a>
-            </div>
-            </div>
-            <div class="d-flex justify-content-center mt-5 mb-3">
-              <a href="mailto:horvath.henriett@gmail.com" target=_blank class="email-link">horvath.henriett@gmail.com</a>
-            </div>
-            <div class="social-links d-flex justify-content-center mb-5">
-               <a href="https://github.com/henih" target="_blank" title="Github Profile"><i class="fab fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/henrietthorvath/" target="_blank" title="LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-              </div>
-              <p class="text-center mt-5">👋🏻 This website was coded by Henriett Horvath, as part of SheCodes Responsive course and is <a class="footer-github-link" href="https://github.com/henih/Portfolio-project" target="_blank">open-sourced.</a></p>
- </footer>
+          </div>
+
+          <div>
+            <a href="mailto:horvath.henriett@gmail.com"
+            target="_blank"
+              class="btn btn-branding"
+              title="Contact Henriett"
+              >Contact Me</a>
+          </div>
+        </div>
+       
+        <div class="social-links d-flex justify-content-center mb-4">
+          <a
+            href="https://github.com/henih"
+            target="_blank"
+            title="Github Profile"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/henrietthorvath/"
+            target="_blank"
+            title="LinkedIn Profile"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+        </div>
+        <p class="text-center mt-4">
+          👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
+          Responsive course and is
+          <a
+            class="footer-github-link"
+            href="https://github.com/henih/Portfolio-project"
+            target="_blank"
+            >open-sourced.</a
+          >
+        </p>
+      </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
