--- a/work.html
+++ b/work.html
@@ -109,30 +109,22 @@
         <h1 class="mb-5">Let's get in touch!</h1>
       </div>
       <footer class="container">
-        <div class="contact-box d-flex justify-content-between mt-3">
+        <div class="contact-box d-flex justify-content-between mt-3 mb-4">
           <div>
             <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
 
           <div>
-            <a
-              href="/contact.html"
+            <a href="mailto:horvath.henriett@gmail.com"
+            target="_blank"
               class="btn btn-branding"
               title="Contact Henriett"
-              >Contact Me</a
-            >
+              >Contact Me</a>
           </div>
         </div>
-        <div class="d-flex justify-content-center mt-5 mb-3">
-          <a
-            href="mailto:horvath.henriett@gmail.com"
-            target="_blank"
-            class="email-link"
-            >horvath.henriett@gmail.com</a
-          >
-        </div>
-        <div class="social-links d-flex justify-content-center mb-5">
+       
+        <div class="social-links d-flex justify-content-center mb-4">
           <a
             href="https://github.com/henih"
             target="_blank"
@@ -146,7 +138,7 @@
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </div>
-        <p class="text-center mt-5">
+        <p class="text-center mt-4">
           👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
           Responsive course and is
           <a
