Updated Weather app screenshot, links

--- a/work.html
+++ b/work.html
@@ -73,13 +73,17 @@
           </div>
           <div class="col-md-6 mb-5">
             <img
-              src="images/weather.png"
+              src="images/weather_app.png"
               class="img-fluid rounded"
               alt="Screenshot of Weather Project"
             />
             <h3 class="text-center">Weather Project</h3>
             <p class="text-center text-muted">
-              Built with HTML, CSS and JavaScript
+              Built with HTML, CSS and React
+              <br />
+
+             
+              <a href="https://musing-meitner-6ea6b3.netlify.app/"  class="btn btn-branding mt-2" target="_blank" title="Weather Project">View Live</a>
             </p>
           </div>
 
