--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
       </div>
        <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="Screenshot of Weather Application" />
+          <img src="images/weather_app.png" class="img-fluid" alt="Screenshot of Weather Application" />
         </div></div>
       <div class="row">
         <div class="col d-none d-lg-block">
