--- a/work.html
+++ b/work.html
@@ -64,25 +64,24 @@
         <div class="row">
           <div class="col-md-6 mb-5">
             <img
-              src="images/yogurt.png"
-              class="img-fluid rounded"
-              alt="Screenshot of Yogurt Project"
+              src="images/meditation.png"
+              class="img-fluid rounded w-75 meditation"
+              alt="Screenshot of Meditation Project"
             />
-            <h3 class="text-center">Yogurt Project</h3>
+            <h3 class="text-center">Meditation Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
+              <a href="https://www.shecodes.io/workshops/shecodes-basics-60f13649-dc6d-4b55-9766-fecefc98bb8b/projects/397241"  class="btn btn-branding" target="_blank" title="Meditation Project">View Live</a>
           </div>
           <div class="col-md-6 mb-5">
             <img
               src="images/weather_app.png"
-              class="img-fluid rounded"
+              class="img-fluid rounded w-75 weather"
               alt="Screenshot of Weather Project"
             />
             <h3 class="text-center">Weather Project</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS and React
               <br />
-
-             
               <a href="https://musing-meitner-6ea6b3.netlify.app/"  class="btn btn-branding mt-2" target="_blank" title="Weather Project">View Live</a>
             </p>
           </div>
