Updated text in About.html

--- a/about.html
+++ b/about.html
@@ -68,8 +68,8 @@
                 Front-end developer based in Zürich, Switzerland
               </h2>
               <p class="mb-5">
-                As a teenager I was put off from studying software engineering in University. My environment deemed it "too manly" and anyway "you need to be a math genius" to be able to learn it.
-                <br /><br />After 12 years working in the Media industry and some pandemic mental tiredness I decided to try coding in the summer of 2021 and enrolled in <a href="https://www.shecodes.io/SheCodes" target="_blank">SheCodes</a> ... and I <strong>loved</strong> it! 😍
+                As a teenager I was put off from studying software engineering in University. The people around me deemed it "too manly" and anyway "you need to be a math genius" to be able to learn it.
+                <br /><br />After 12 years working in the Media industry and some "pandemic tiredness" I decided to try coding in the summer of 2021 and enrolled in <a href="https://www.shecodes.io/SheCodes" target="_blank">SheCodes</a> ... and I <strong>loved</strong> it! 😍
                 <br />
                 <br />
                 I'm passionate about Front-end Development and excited to learn more about React, HTML, CSS and Reponsive webdesign.
