Updated Content and CSS

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/c823202b47.js"
       crossorigin="anonymous"
@@ -62,8 +66,11 @@
             <a class="nav-link" href="/about.html" title="About Henriett"
               >About</a
             >
-            <a class="nav-link" href="/work.html" title="Henriett's Work"
-              >Work</a
+            <a
+              class="nav-link"
+              href="https://drive.google.com/file/d/1zhaEVDSmKuXKwLHhz5_a1IfU8My-LXKa/view?usp=sharing"
+              title="Download Resume"
+              >Resume</a
             >
             <a
               class="nav-link active"
@@ -77,7 +84,7 @@
     </nav>
     <div class="content-container mt-5">
       <div class="content">
-        <h1 class="mb-5">Let's get in touch!</h1>
+        <h1 class="mb-5 text-center">Let's get in touch!</h1>
       </div>
       <footer class="container">
         <div class="contact-box d-flex justify-content-between mt-3 mb-4">
@@ -112,13 +119,12 @@
           ></a>
         </div>
         <p class="text-center mt-4">
-          👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
-          Responsive course and is
+          👋🏻 This website was coded by Henriett Horvath and is open-sourced on
           <a
             class="footer-github-link"
             href="https://github.com/henih/Portfolio-project"
             target="_blank"
-            >open-sourced.</a
+            >GitHub.</a
           >
         </p>
       </footer>
