--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Front-end developer - Henriett Horvath</title>
+    <title>Frontend developer - Henriett Horvath</title>
     <meta
       name="description"
       content="Henriett is a front-end engineer based in Zurich, Swizterland. She has completed the 6 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising."
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
     <script
       src="https://kit.fontawesome.com/c823202b47.js"
       crossorigin="anonymous"
@@ -62,8 +66,8 @@
             <a class="nav-link" href="/about.html" title="About Henriett"
               >About</a
             >
-            <a class="nav-link" href="/work.html" title="Henriett's Work"
-              >Work</a
+                 <a class="nav-link" href="https://drive.google.com/file/d/1zhaEVDSmKuXKwLHhz5_a1IfU8My-LXKa/view?usp=sharing" title="Download Resume"
+              >Resume</a
             >
             <a class="nav-link" href="/contact.html" title="Contact Henriett"
               >Contact</a
@@ -72,11 +76,10 @@
         </div>
       </div>
     </nav>
-
+<header>
     <div class="hero">
-      <p>🙋🏼‍♀️ Hi, I am</p>
-      <h1>HENRIETT HORVATH</h1>
-      <h2 class="mb-5">Front-end developer based in Zürich, Switzerland</h2>
+      <h1>Henriett Horvath</h1>
+      <h2 class="mb-5">Frontend developer based in Zürich, Switzerland</h2>
       <div>
         <a
           href="/contact.html"
@@ -86,54 +89,66 @@
         >
       </div>
     </div>
-    <p class="mt-5 mb-5 text-center">My Featured Projects</p>
+    </header>
+    <main>
+    <h2 class="mt-5 text-center">My Featured Projects</h2>
     <div class="container">
-      <div class="row">
-        <div class="col d-none d-lg-block">
+<section class="grid grid-2-col text-center mb-3">
+          <div>
           <img
-            src="images/meditation.png"
+            src="images/World-of-Words.png"
             class="img-fluid"
-            alt="Screenshot of Meditation Project"
+            alt="Screenshot of Dictionary Project"
           />
-        </div>
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-4">Meditation Project</h2>
-            <p class="text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline"
-              >View Project Details</a
-            >
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-4">Weather Project</h2>
-            <p class="text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+          <div>
+            <h2>Dictionary App</h2>
+           <p class="tech-used">React JS HTML CSS API</p>
+             This project is integrating 2 different APIs for word definition and image search and was built with React.
             </p>
-            <a href="/work.html" class="btn btn-branding-outline"
-              >View Project Details</a
-            >
+           <a href="https://world-of-words.netlify.app/" class="btn btn-branding-outline "
+              >View live demo</a>
           </div>
-        </div>
-        <div class="col d-none d-lg-block">
-          <img
+        </section>
+        <section class="grid grid-2-col text-center">
+                  <div>
+            <h2>Weather Project</h2>
+           <p class="tech-used">React JS HTML CSS API</p>
+             Within this app I integrated the OpenWeather Forecast API to receive data for the next 5 days.
+            </p>
+           <a href="https://musing-meitner-6ea6b3.netlify.app/" class="btn btn-branding-outline"
+              >View live demo</a>
+          </div>
+            <div>
+           <img
             src="images/weather_app.png"
             class="img-fluid"
             alt="Screenshot of Weather Application"
           />
-        </div>
-      </div>
+          </div>
+        </section>
+<section class="grid grid-2-col text-center mb-5">
+          <div>
+          <img
+            src="images/BlueMindTherapyHomepage.png"
+            class="img-fluid"
+            alt="Screenshot of Blue Mind Therapy Website"
+          />
+          </div>
+          <div>
+            <h2>Blue Mind Therapy</h2>
+           <p class="tech-used">JS HTML CSS Bootstrap</p>
+             This project was part of the SheCodes Favorite Sport Coding Challenge.
+             I integrated a random background color generator and several social plug-ins (Youtube, Instagram, Spotify).
+            </p>
+            </p>
+           <a href="https://www.shecodes.io/contests/favorite-sport-challenge/contest_entries/henriett-horvath-hungarian/preview" class="btn btn-branding-outline"
+              >View live demo</a>
+          </div>
+        </section>
+         </div>
+    
+      </main>
 
       <footer class="container">
         <div class="contact-box d-flex justify-content-between mt-3 mb-4">
@@ -168,13 +183,13 @@
           ></a>
         </div>
         <p class="text-center mt-4">
-          👋🏻 This website was coded by Henriett Horvath, as part of SheCodes
-          Responsive course and is
+          👋🏻 This website was coded by Henriett Horvath
+          and is open-sourced on 
           <a
             class="footer-github-link"
             href="https://github.com/henih/Portfolio-project"
             target="_blank"
-            >open-sourced.</a
+            >GitHub.</a
           >
         </p>
       </footer>
