Updated links, text and CSS

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>About Henriett</title>
     <meta
       name="description"
-      content="Henriett is a front-end engineer based in Zurich, Swizterland. She has completed the 6 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising."
+      content="Henriett is a front-end engineer based in Zurich, Swizterland. She has completed the 8 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising."
     />
     <link rel="stylesheet" href="Styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -59,7 +59,7 @@
             <a class="nav-link active" href="/about.html" title="About Henriett"
               >About</a
             >
-                  <a class="nav-link" href="https://drive.google.com/file/d/1zhaEVDSmKuXKwLHhz5_a1IfU8My-LXKa/view?usp=sharing" title="Download Resume"
+                  <a class="nav-link" href="https://drive.google.com/file/d/11EwK6HaZhzl6bCvIPtYY4za00qrR09sc/view?usp=sharing" title="Download Resume"
               >Resume</a
             >
                        <a class="nav-link" href="/contact.html" title="Contact Henriett"
@@ -72,7 +72,7 @@
      <header>
     <div class="hero">
       <h1>Henriett Horvath</h1>
-      <h2 class="mb-5">Frontend developer based in Zürich, Switzerland</h2>
+      <h2 class="mb-5">Front-end developer based in Zürich, Switzerland</h2>
       <div>
         <a
           href="/contact.html"
@@ -95,7 +95,7 @@
                 <br /> <br />As a teenager I also considered studying Computer Science, but was put off from studying software engineering in University.  <br /> The people around me deemed it "too manly" and anyway "you need to be a math genius" to be able to learn it.
                 <br /><br />Nevertheless it was always in the back of mind that I should have gone for it.
                 After 12 years working in the Media industry I decided to at least try coding in the summer of 2021 and enrolled in <a href="https://www.shecodes.io/SheCodes" target="_blank">SheCodes</a> ... and I <strong>loved</strong> it! 😍 
-                 <br /> <br />Since then I also completed additional courses and finished at SheCodes as a Frontend Developer.
+                 <br /> <br />Since then I also completed additional courses and finished at SheCodes as a Front-end Developer.
                 <br />
                 <br />
                 I'm passionate about Front-end Development and excited to learn more about React, HTML, CSS and Responsive webdesign.
