--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend developer - Henriett Horvath</title>
+    <title>Front-end developer - Henriett Horvath</title>
     <meta
       name="description"
-      content="Henriett is a front-end engineer based in Zurich, Swizterland. She has completed the 6 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising."
+      content="Henriett is a front-end engineer based in Zurich, Swizterland. She has completed the 8 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising."
     />
     <link rel="stylesheet" href="Styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -66,7 +66,7 @@
             <a class="nav-link" href="/about.html" title="About Henriett"
               >About</a
             >
-                 <a class="nav-link" href="https://drive.google.com/file/d/1zhaEVDSmKuXKwLHhz5_a1IfU8My-LXKa/view?usp=sharing" title="Download Resume"
+                 <a class="nav-link" href="https://drive.google.com/file/d/11EwK6HaZhzl6bCvIPtYY4za00qrR09sc/view?usp=sharing" title="Download Resume"
               >Resume</a
             >
             <a class="nav-link" href="/contact.html" title="Contact Henriett"
@@ -79,7 +79,7 @@
 <header>
     <div class="hero">
       <h1>Henriett Horvath</h1>
-      <h2 class="mb-5">Frontend developer based in Zürich, Switzerland</h2>
+      <h2 class="mb-5">Front-end developer based in Zürich, Switzerland</h2>
       <div>
         <a
           href="/contact.html"
@@ -106,7 +106,7 @@
            <p class="tech-used">React JS HTML CSS API</p>
              This project is integrating 2 different APIs for word definition and image search and was built with React.
             </p>
-           <a href="https://world-of-words.netlify.app/" class="btn btn-branding-outline "
+           <a href="https://world-of-words.netlify.app/"  class="btn btn-branding-outline"
               >View live demo</a>
           </div>
         </section>
@@ -116,7 +116,7 @@
            <p class="tech-used">React JS HTML CSS API</p>
              Within this app I integrated the OpenWeather Forecast API to receive data for the next 5 days.
             </p>
-           <a href="https://musing-meitner-6ea6b3.netlify.app/" class="btn btn-branding-outline"
+           <a href="https://musing-meitner-6ea6b3.netlify.app/"  class="btn btn-branding-outline"
               >View live demo</a>
           </div>
             <div>
@@ -142,7 +142,7 @@
              I integrated a random background color generator and several social plug-ins (Youtube, Instagram, Spotify).
             </p>
             </p>
-           <a href="https://www.shecodes.io/contests/favorite-sport-challenge/contest_entries/henriett-horvath-hungarian/preview" class="btn btn-branding-outline"
+           <a href="https://www.shecodes.io/contests/favorite-sport-challenge/contest_entries/henriett-horvath-hungarian/preview"  class="btn btn-branding-outline"
               >View live demo</a>
           </div>
         </section>
