Updated Navbar links

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             <a class="nav-link active" href="/about.html" title="About Henriett"
               >About</a
             >
-                  <a class="nav-link" href="https://drive.google.com/file/d/11EwK6HaZhzl6bCvIPtYY4za00qrR09sc/view?usp=sharing" title="Download Resume"
+                  <a class="nav-link" href="https://www.dropbox.com/scl/fi/wtedmegoisdz16jh38q29/Henriett-Horvath_CV.pdf?rlkey=hhi8bz8xnpgu21xezdmou53k2&dl=0" title="Download Resume"
               >Resume</a
             >
                        <a class="nav-link" href="/contact.html" title="Contact Henriett"
@@ -149,6 +149,7 @@
             title="LinkedIn Profile"
             ><i class="fab fa-linkedin-in"></i
           ></a>
+        
         </div>
         <p class="text-center mt-4">
           👋🏻 This website was coded by Henriett Horvath
