--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             >
             <a
               class="nav-link"
-              href="https://drive.google.com/file/d/11EwK6HaZhzl6bCvIPtYY4za00qrR09sc/view?usp=sharing"
+              href="https://www.dropbox.com/scl/fi/wtedmegoisdz16jh38q29/Henriett-Horvath_CV.pdf?rlkey=hhi8bz8xnpgu21xezdmou53k2&dl=0"
               title="Download Resume"
               >Resume</a
             >
