--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="nav-link" href="/about.html" title="About Henriett"
               >About</a
             >
-                 <a class="nav-link" href="https://drive.google.com/file/d/11EwK6HaZhzl6bCvIPtYY4za00qrR09sc/view?usp=sharing" title="Download Resume"
+                 <a class="nav-link" href="https://www.dropbox.com/scl/fi/wtedmegoisdz16jh38q29/Henriett-Horvath_CV.pdf?rlkey=hhi8bz8xnpgu21xezdmou53k2&dl=0" title="Download Resume"
               >Resume</a
             >
             <a class="nav-link" href="/contact.html" title="Contact Henriett"
