Updated Styles and Content

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>About Henriett</title>
     <meta
       name="description"
-      content="Henriett is a front-end engineer based in Zurich, Swizterland. She has completed the 8 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising."
+      content="Henriett is a front-end developer based in Zurich, Swizterland. She has completed the 8 months long SheCodes course. Before exploring her passion for the Tech industry, she's worked for 12 years in Media and Advertising."
     />
     <link rel="stylesheet" href="Styles/portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -91,11 +91,11 @@
                   <div>
                      <h2 class="about-me text-center mt-5">👋🏻 Hi there, it's nice to meet you </h2>
        <p class="mb-5 about-me-summary">
-                I remember as a small child that next to my Legos I was also making Laptops out of paper with full keyboard and screen.  
-                <br /> <br />As a teenager I also considered studying Computer Science, but was put off from studying software engineering in University.  <br /> The people around me deemed it "too manly" and anyway "you need to be a math genius" to be able to learn it.
-                <br /><br />Nevertheless it was always in the back of mind that I should have gone for it.
-                After 12 years working in the Media industry I decided to at least try coding in the summer of 2021 and enrolled in <a href="https://www.shecodes.io/SheCodes" target="_blank">SheCodes</a> ... and I <strong>loved</strong> it! 😍 
-                 <br /> <br />Since then I also completed additional courses and finished at SheCodes as a Front-end Developer.
+                My passion for building was ignited as a young child, from playing with Lego to crafiting paper laptops with full keyboard and screen.  
+                <br /> <br />During my teenage years, I played with the idea of pursuing Computer Science, but societal opinions labeling it "too masculine" and the myth that it required extraordinary math skills deterred me.  <br />
+                <br />The idea lingered in the back of my mind, but was overshadowed by my career in the Media industry.
+                However, the spark of interest never faded, and in the summer of 2021, I decided to dive into coding through <a href="https://www.shecodes.io/SheCodes" target="_blank">SheCodes</a>, an experience I absolutely <strong>loved</strong>! 😍 
+                 <br /> <br />I went on to explore Front-end Development and completed an eight months long part-time certificate course.
                 <br />
                 <br />
                 I'm passionate about Front-end Development and excited to learn more about React, HTML, CSS and Responsive webdesign.
@@ -104,7 +104,7 @@
          
             <div>
          <img
-              src="images/final_funny_BW.jpg"
+              src="images/henriett_horvath.jpg"
               alt="Henriett Horvath headshot"
               class="img-fluid w-75 headshot"
             />
