--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="nav-link" href="/about.html" title="About Henriett"
               >About</a
             >
-                 <a class="nav-link" href="https://www.dropbox.com/scl/fi/wtedmegoisdz16jh38q29/Henriett-Horvath_CV.pdf?rlkey=hhi8bz8xnpgu21xezdmou53k2&dl=0" title="Download Resume"
+                 <a class="nav-link" href="https://www.dropbox.com/scl/fi/nds44h4s4j4jg22u9mr2u/CV-Henriett-Horvath.pdf?rlkey=kfj1njb5bd147d79zm6oxnex9&dl=0" title="Download Resume"
               >Resume</a
             >
             <a class="nav-link" href="/contact.html" title="Contact Henriett"
@@ -78,6 +78,7 @@
     </nav>
 <header>
     <div class="hero">
+      <div class="header-text">
       <h1>Henriett Horvath</h1>
       <h2 class="mb-5">Front-end developer based in Zürich, Switzerland</h2>
       <div>
@@ -87,6 +88,7 @@
           title="Contact Henriett"
           >Contact Me</a
         >
+      </div>
       </div>
     </div>
     </header>
