--- a/about.html
+++ b/about.html
@@ -89,8 +89,8 @@
   <div class="container">
       <section class="grid grid-2-col text-center mb-3 about-me">
                   <div>
-                     <h2 class="about-me text-center mt-5">👋🏻 Hi there, it's nice to meet you </h2>
-       <p class="mb-5 about-me-summary">
+                     <h2 class="about-me text-center">👋🏻 Hi there, it's nice to meet you </h2>
+       <p class="mb-4 about-me-summary">
                 My passion for building was ignited as a young child, from playing with Lego to crafiting paper laptops with full keyboard and screen.  
                 <br /> <br />During my teenage years, I played with the idea of pursuing Computer Science, but societal opinions labeling it "too masculine" and the myth that it required extraordinary math skills deterred me.  <br />
                 <br />The idea lingered in the back of my mind, but was overshadowed by my career in the Media industry.
@@ -119,7 +119,7 @@
       </div>
       </main>
       <footer class="container">
-        <div class="contact-box d-flex justify-content-between mt-3 mb-4">
+        <div class="contact-box d-flex justify-content-between align-items-center mt-3 mb-4">
           <div>
             <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
