--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
       </div>
 
       <footer class="container">
-        <div class="contact-box d-flex justify-content-between mt-3 mb-4">
+        <div class="contact-box d-flex justify-content-between align-items-center mt-3 mb-4">
           <div>
             <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
