--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </main>
 
       <footer class="container">
-        <div class="contact-box d-flex justify-content-between mt-3 mb-4">
+        <div class="contact-box d-flex justify-content-between align-items-center mt-3 mb-4">
           <div>
             <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
